--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&si</a>
           
 </body>
-        </html>=https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash"> 🚀Crash</a>
+        </html>
+          <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash"> 🚀Crash</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> 🎰Casino</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">🎲Slots</a>
       </div>
