--- a/index.html
+++ b/index.html
@@ -52,20 +52,17 @@
   
   <div id="combo-container">
     <!-- 1xBet Section -->
-    <section class="brand-section" id="x1bet">
+    <section class="brand-section" id="linebet">
       <div class="tag-popular">Popular</div>
 
+      
       <h2>1xbet</h2>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&si</a>
-          
-</body>
-        </html>
-          <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash"> 🚀Crash</a>
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank"> 🎰Casino</a>
-        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" target="_blank">🎲Slots</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank">🎰Casino</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=slots/wild-west-spin" target="_blank">🎲Slots</a>
       </div>
     </section>
 
