--- a/index.html
+++ b/index.html
@@ -12,20 +12,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<!-- Start of Tawk.to Script -->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/YOUR_PROPERTY_ID/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!-- End of Tawk.to Script -->
-  
   <header>
     <h1>Oxy Club</h1>
     <p>Choose your platform & start winning!</p>
@@ -56,6 +42,22 @@ s0.parentNode.insertBefore(s1,s0);
       📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet, Melbet, PlnBet — নিচিন্তে একাউন্ট করুন নিজেই ডিপোজিট উইথড্র করুন । বিশেষ সুবিধা cash out সিস্টেম | এখনই জয়েন করুন! 🎁
     </marquee>
   </div>
+  <!-- তোমার পুরো HTML -->
+
+<!-- এখানে চ্যাটবট স্ক্রিপ্ট বসাও -->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/YOUR_PROPERTY_ID/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+</body>
+</html>
 
 </body>
 </html>
