--- a/index.html
+++ b/index.html
@@ -133,16 +133,46 @@
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
 
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AllSiteBD - Official Page</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- Header Section -->
+  <header>
+    <h1>Welcome to AllSiteBD</h1>
+    <p>Your trusted affiliate platform.</p>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <section>
+      <h2>Join Now</h2>
+      <a href="https://your-affiliate-link.com" class="join-btn">Join 1xBet Now</a>
+    </section>
+  </main>
+
+  <!-- Tawk.to Live Chat Script -->
+  <!--Start of Tawk.to Script-->
   <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/688f2f01ad8e7c1924fc6103/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/688f2f01ad8e7c1924fc6103/1j1nkv942';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
   </script>
+  <!--End of Tawk.to Script-->
+
+</body>
+</html>
 </body>
 </html>
