--- a/index.html
+++ b/index.html
@@ -121,6 +121,74 @@
     </div>
   </section>
 
+  <!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8" />
+  <title>Payment Gateway Demo</title>
+  <style>
+    #payment-gateways {
+      padding: 20px 0; 
+      background: #f0f4f8; 
+      text-align: center; 
+      font-family: Arial, sans-serif;
+    }
+    #payment-gateways h2 {
+      margin-bottom: 15px; 
+      color: #333;
+    }
+    .gateway-container {
+      display: flex; 
+      justify-content: center; 
+      gap: 40px; 
+      flex-wrap: wrap; 
+      align-items: center;
+    }
+    .gateway-box {
+      display: flex; 
+      flex-direction: column; 
+      align-items: center;
+    }
+    .gateway-box img {
+      width: 80px; 
+      height: auto; 
+      margin-bottom: 8px;
+      object-fit: contain;
+    }
+    .gateway-box span {
+      font-weight: bold; 
+      color: #222;
+      font-size: 16px;
+    }
+  </style>
+</head>
+<body>
+
+<section id="payment-gateways">
+  <h2>পেমেন্ট গেটওয়ে</h2>
+  <div class="gateway-container">
+    
+    <div class="gateway-box">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/BKash_Logo.svg/1200px-BKash_Logo.svg.png" alt="bKash" />
+      <span>bKash</span>
+    </div>
+
+    <div class="gateway-box">
+      <img src="https://seeklogo.com/images/N/nagad-logo-2582FE72C0-seeklogo.com.png" alt="Nagad" />
+      <span>Nagad</span>
+    </div>
+
+    <div class="gateway-box">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Rocket_Logo.svg/1200px-Rocket_Logo.svg.png" alt="Rocket" />
+      <span>Rocket</span>
+    </div>
+
+  </div>
+</section>
+
+</body>
+</html>
+
   <!-- Telegram Join Button -->
   <div class="telegram-join">
     <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
