--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://linebet.press/oxy11" target="_blank">Free Spin</a>
+        <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
         <a href="https://linebet.press/oxy11" target="_blank">Link 1</a>
         <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">Link 2</a>
       </div>
