--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="1xBet & Linebet Promo Code- Oxy11" />
-  <meta property="og:description" content="Get your bonus now. Safe & Fast registration." />
+  <meta property="og:description" content="Get your bonus now🏆Safe & Fast registration." />
   <meta property="og:url" content="https://allsitebd.netlify.app/" />
   <meta name="twitter:card" content="summary" />
 
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1>Oxy Club</h1>
-    <p>Choose your platform & start winning!</p>
+    <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
   <div class="marquee-wrapper" style="background: linear-gradient(90deg, #0f172a, #000080); padding: 8px 0; color: #ffeb3b; font-size: 14px; font-weight: bold; font-family: 'Arial', sans-serif;">
@@ -47,8 +47,8 @@
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
-        <a href="https://linebet.press/oxy11" target="_blank">Link 1</a>
-        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">Link 2</a>
+        <a href="https://linebet.press/oxy11" target="_blank">🎰Casino</a>
+        <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">🎲Slots</a>
       </div>
     </section>
 
@@ -59,9 +59,9 @@
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 Melbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://melbet6767.netlify.app/" target="_blank">Sports</a>
-        <a href="https://melbet6767.netlify.app/" target="_blank">Casino</a>
-        <a href="https://melbet6767.netlify.app/" target="_blank">Slots</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">🏟️Sports</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">🎰Casino</a>
+        <a href="https://melbet6767.netlify.app/" target="_blank">🎲Slots</a>
       </div>
     </section>
 
@@ -72,9 +72,9 @@
       <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank">Register👉 Planbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://planbet.me/Oxy11" target="_blank">Sports</a>
-        <a href="https://planbet.me/Oxy11" target="_blank">Casino</a>
-        <a href="https://planbet.me/Oxy11" target="_blank">Slots</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">🏟️Sports</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">🎰Casino</a>
+        <a href="https://planbet.me/Oxy11" target="_blank">🎲Slots</a>
       </div>
     </section>
 
@@ -85,9 +85,9 @@
       <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Register👉 Betwiner</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
-        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Sports</a>
-        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Casino</a>
-        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">Slots</a>
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🏏Sports</a>
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🎰Casino</a>
+        <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🎲Slots</a>
       </div>
     </section>
   </div>
