--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>Oxy Club</h1>
+    <h1>International</h1>
     <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
@@ -96,7 +96,14 @@
   <section id="promo-section">
     <h2>🎁 Get Your Bonus Now!</h2>
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
-    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
+    
+  <!-- Telegram Join Button -->
+  <div class="telegram-join">
+    <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
+      <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
+      Join Telegram
+    </a>
+  </div>
   </section>
 
   <!-- Stats Section -->
@@ -189,13 +196,6 @@
 </body>
 </html>
 
-  <!-- Telegram Join Button -->
-  <div class="telegram-join">
-    <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
-      <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
-      Join Telegram
-    </a>
-  </div>
 
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
