--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
       Join Telegram
     </a>
+    <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
   </div>
   </section>
 
