--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
     <h2>🎁 Get Your Bonus Now!</h2>
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
     <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Join WhatsApp</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <a href="https://wa.me/8801826444505?text=Hi%2C%20I%20want%20to%20join%20your%20WhatsApp%20group" target="_blank" class="whatsapp-button">
+    Join WhatsApp
+  </a>
+
+</body>
+</html>
   <!-- Telegram Join Button -->
   <div class="telegram-join">
     <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
