--- a/index.html
+++ b/index.html
@@ -328,5 +328,29 @@
     }
   };
 </script>
+
+<!-- ✅ Option A: Welcome Popup -->
+<div id="popupBox" style="position: fixed; top: 30%; left: 50%; transform: translate(-50%, -50%); background: white; border: 2px solid #007bff; border-radius: 10px; padding: 20px; text-align: center; z-index: 9999; display: none; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+  <h3 style="margin-bottom: 10px;">🎁 Welcome to All Site BD!</h3>
+  <p style="margin-bottom: 15px;">Join now & get 100% bonus!</p>
+  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">Join Now</a><br><br>
+  <button onclick="document.getElementById('popupBox').style.display='none'" style="margin-top: 10px;">❌ Close</button>
+</div>
+
+<!-- ✅ Option B: Auto Message Box -->
+<div id="autoMsgBox" style="position: fixed; bottom: 20px; right: 20px; background: #f1f1f1; border-radius: 12px; padding: 15px; max-width: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.2); font-family: sans-serif; z-index: 9999;">
+  <p style="margin: 0 0 10px;">👋 Hi! Want to join & get bonus?</p>
+  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #007bff; color: white; padding: 8px 12px; text-decoration: none; border-radius: 5px; display: inline-block; margin-bottom: 5px;">Join Now</a><br>
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="color: #007bff; text-decoration: none;">📲 Telegram Group</a>
+</div>
+
+<!-- ✅ Script to show popup once -->
+<script>
+  window.onload = function() {
+    setTimeout(() => {
+      document.getElementById('popupBox').style.display = 'block';
+    }, 2000); // 2 sec delay
+  };
+</script>
 </body>
 </html>
