--- a/index.html
+++ b/index.html
@@ -216,140 +216,42 @@
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
 
+<!-- ✅ Option A: Welcome Popup (Close Button Top Right) -->
+<div id="popupBox" style="position: fixed; top: 25%; left: 50%; transform: translate(-50%, -25%); background: #0c1c3d; color: white; border-radius: 14px; padding: 35px 25px 25px; text-align: center; z-index: 9999; display: none; box-shadow: 0 0 25px rgba(0,0,0,0.6); font-family: sans-serif; width: 90%; max-width: 400px; animation: popupFade 0.5s ease; position: fixed;">
+  
+  <!-- Close Button -->
+  <button onclick="document.getElementById('popupBox').style.display='none'" style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: white; font-size: 20px; cursor: pointer;">✖</button>
 
-  <!-- Tawk.to Live Chat Script -->
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/688f2f01ad8e7c1924fc6103/1j1nkv942';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+  <h2 style="margin-top: 10px; margin-bottom: 15px; font-size: 24px;">🎁 স্বাগতম All Site BD!</h2>
+  <p style="margin-bottom: 20px; font-size: 18px;">এখনই জয়েন করুন এবং ১০০% বোনাস পান!</p>
+  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #00b894; color: white; padding: 12px 28px; text-decoration: none; border-radius: 8px; font-size: 16px; font-weight: bold;">🎯 Join Now</a>
+</div>
 
-</body>
-</html>
+<!-- ✅ Option B: Auto Message Box (unchanged) -->
+<div id="autoMsgBox" style="position: fixed; bottom: 25px; right: 25px; background: #1e2a47; color: white; border-radius: 15px; padding: 18px; max-width: 280px; box-shadow: 0 0 15px rgba(0,0,0,0.5); font-family: sans-serif; z-index: 9999; animation: slideUp 0.6s ease;">
+  <p style="margin: 0 0 12px; font-size: 16px;">👋 হাই! অ্যাকাউন্ট খুলে এখনই বোনাস নিন!</p>
+  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #00b894; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; display: inline-block; margin-bottom: 8px; font-size: 15px;">🎯 Join Now</a><br>
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="color: #74c0fc; text-decoration: none; font-size: 14px;">📲 Telegram Group</a>
+</div>
 
-<!-- Stylish Popup Ad CSS -->
+<!-- ✅ Animation -->
 <style>
-  #popupAd {
-    display: none;
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.6);
-    z-index: 10000;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  @keyframes popupFade {
+    from {opacity: 0; transform: translate(-50%, -40%);}
+    to {opacity: 1; transform: translate(-50%, -25%);}
   }
-  #popupAdContent {
-    background: #fff;
-    border-radius: 15px;
-    padding: 30px 40px;
-    max-width: 380px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    text-align: center;
-    position: relative;
-    animation: popupFadeIn 0.4s ease forwards;
-  }
-  @keyframes popupFadeIn {
-    from {opacity: 0; transform: scale(0.8);}
-    to {opacity: 1; transform: scale(1);}
-  }
-  #popupAdClose {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    cursor: pointer;
-    font-size: 24px;
-    color: #888;
-    transition: color 0.3s ease;
-  }
-  #popupAdClose:hover {
-    color: #e74c3c;
-  }
-  #popupAdContent h2 {
-    font-size: 24px;
-    margin-bottom: 12px;
-    color: #222;
-  }
-  #popupAdContent p {
-    font-size: 17px;
-    margin-bottom: 25px;
-    color: #555;
-  }
-  #popupAdContent a.join-btn {
-    background: linear-gradient(90deg, #0052d4, #4364f7, #6fb1fc);
-    color: white;
-    padding: 14px 28px;
-    font-size: 16px;
-    border-radius: 30px;
-    text-decoration: none;
-    font-weight: 600;
-    box-shadow: 0 6px 15px rgba(111,177,252,0.6);
-    transition: background 0.3s ease;
-    display: inline-block;
-  }
-  #popupAdContent a.join-btn:hover {
-    background: linear-gradient(90deg, #4364f7, #6fb1fc, #0052d4);
+  @keyframes slideUp {
+    from {opacity: 0; transform: translateY(30px);}
+    to {opacity: 1; transform: translateY(0);}
   }
 </style>
 
-<!-- Stylish Popup Ad HTML -->
-<div id="popupAd">
-  <div id="popupAdContent">
-    <span id="popupAdClose">&times;</span>
-    <h2>🎉 বিশেষ অফার!</h2>
-    <p>আজই জয়েন করুন এবং <strong>Oxy11</strong> প্রোমো কোড ব্যবহার করে এক্সট্রা বোনাস পেয়ে যান।</p>
-    <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo" target="_blank" class="join-btn">এখনই জয়েন করুন</a>
-  </div>
-</div>
-
-<!-- Stylish Popup Ad JS -->
-<script>
-  window.onload = function() {
-    setTimeout(() => {
-      document.getElementById('popupAd').style.display = 'flex';
-    }, 4000);
-
-    document.getElementById('popupAdClose').onclick = function() {
-      document.getElementById('popupAd').style.display = 'none';
-    }
-
-    document.getElementById('popupAd').onclick = function(e) {
-      if (e.target === this) {
-        this.style.display = 'none';
-      }
-    }
-  };
-</script>
-
-<!-- ✅ Option A: Welcome Popup -->
-<div id="popupBox" style="position: fixed; top: 30%; left: 50%; transform: translate(-50%, -50%); background: white; border: 2px solid #007bff; border-radius: 10px; padding: 20px; text-align: center; z-index: 9999; display: none; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <h3 style="margin-bottom: 10px;">🎁 Welcome to All Site BD!</h3>
-  <p style="margin-bottom: 15px;">Join now & get 100% bonus!</p>
-  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">Join Now</a><br><br>
-  <button onclick="document.getElementById('popupBox').style.display='none'" style="margin-top: 10px;">❌ Close</button>
-</div>
-
-<!-- ✅ Option B: Auto Message Box -->
-<div id="autoMsgBox" style="position: fixed; bottom: 20px; right: 20px; background: #f1f1f1; border-radius: 12px; padding: 15px; max-width: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.2); font-family: sans-serif; z-index: 9999;">
-  <p style="margin: 0 0 10px;">👋 Hi! Want to join & get bonus?</p>
-  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #007bff; color: white; padding: 8px 12px; text-decoration: none; border-radius: 5px; display: inline-block; margin-bottom: 5px;">Join Now</a><br>
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="color: #007bff; text-decoration: none;">📲 Telegram Group</a>
-</div>
-
-<!-- ✅ Script to show popup once -->
+<!-- ✅ Show popup after delay -->
 <script>
   window.onload = function() {
     setTimeout(() => {
       document.getElementById('popupBox').style.display = 'block';
-    }, 2000); // 2 sec delay
+    }, 2000); // Show after 2 sec
   };
 </script>
 </body>
