--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
   <p style="margin: 0 0 12px; font-size: 16px;">👋 হাই! অ্যাকাউন্ট খুলে এখনই বোনাস নিন!</p>
   <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #00b894; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; display: inline-block; margin-bottom: 8px; font-size: 15px;">🎯 Join Now</a><br>
   <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="color: #74c0fc; text-decoration: none; font-size: 14px;">📲 Telegram Group</a>
+    <button onclick="document.getElementById('popupBox').style.display='none'" style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: white; font-size: 20px; cursor: pointer;">✖</button>
+  
 </div>
 
 <!-- ✅ Animation -->
