--- a/index.html
+++ b/index.html
@@ -215,46 +215,18 @@
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
-
-<!-- ✅ Option A: Welcome Popup (Close Button Top Right) -->
-<div id="popupBox" style="position: fixed; top: 25%; left: 50%; transform: translate(-50%, -25%); background: #0c1c3d; color: white; border-radius: 14px; padding: 35px 25px 25px; text-align: center; z-index: 9999; display: none; box-shadow: 0 0 25px rgba(0,0,0,0.6); font-family: sans-serif; width: 90%; max-width: 400px; animation: popupFade 0.5s ease; position: fixed;">
-  
-  <!-- Close Button -->
-  <button onclick="document.getElementById('popupBox').style.display='none'" style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: white; font-size: 20px; cursor: pointer;">✖</button>
-
-  <h2 style="margin-top: 10px; margin-bottom: 15px; font-size: 24px;">🎁 স্বাগতম All Site BD!</h2>
-  <p style="margin-bottom: 20px; font-size: 18px;">এখনই জয়েন করুন এবং ১০০% বোনাস পান!</p>
-  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #00b894; color: white; padding: 12px 28px; text-decoration: none; border-radius: 8px; font-size: 16px; font-weight: bold;">🎯 Join Now</a>
-</div>
-
-<!-- ✅ Option B: Auto Message Box (unchanged) -->
+<!-- ✅ Telegram Message Box Only -->
 <div id="autoMsgBox" style="position: fixed; bottom: 25px; right: 25px; background: #1e2a47; color: white; border-radius: 15px; padding: 18px; max-width: 280px; box-shadow: 0 0 15px rgba(0,0,0,0.5); font-family: sans-serif; z-index: 9999; animation: slideUp 0.6s ease;">
-  <p style="margin: 0 0 12px; font-size: 16px;">👋 হাই! অ্যাকাউন্ট খুলে এখনই বোনাস নিন!</p>
-  <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" style="background: #00b894; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; display: inline-block; margin-bottom: 8px; font-size: 15px;">🎯 Join Now</a><br>
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="color: #74c0fc; text-decoration: none; font-size: 14px;">📲 Telegram Group</a>
-    <button onclick="document.getElementById('popupBox').style.display='none'" style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: white; font-size: 20px; cursor: pointer;">✖</button>
-  
+  <p style="margin: 0 0 12px; font-size: 16px;">📲 Telegram এ জয়েন করে অ্যাকাউন্ট খুলুন ও বোনাস নিন!</p>
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="background: #00b894; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; display: inline-block; font-size: 15px;">✅ Join Telegram</a>
 </div>
 
 <!-- ✅ Animation -->
 <style>
-  @keyframes popupFade {
-    from {opacity: 0; transform: translate(-50%, -40%);}
-    to {opacity: 1; transform: translate(-50%, -25%);}
-  }
   @keyframes slideUp {
     from {opacity: 0; transform: translateY(30px);}
     to {opacity: 1; transform: translateY(0);}
   }
 </style>
-
-<!-- ✅ Show popup after delay -->
-<script>
-  window.onload = function() {
-    setTimeout(() => {
-      document.getElementById('popupBox').style.display = 'block';
-    }, 2000); // Show after 2 sec
-  };
-</script>
 </body>
 </html>
