--- a/index.html
+++ b/index.html
@@ -215,10 +215,13 @@
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
-<!-- ✅ Telegram Message Box Only -->
+<!-- ✅ Telegram Message Box with Logo -->
 <div id="autoMsgBox" style="position: fixed; bottom: 25px; right: 25px; background: #1e2a47; color: white; border-radius: 15px; padding: 18px; max-width: 280px; box-shadow: 0 0 15px rgba(0,0,0,0.5); font-family: sans-serif; z-index: 9999; animation: slideUp 0.6s ease;">
-  <p style="margin: 0 0 12px; font-size: 16px;">📲 Telegram এ জয়েন করে অ্যাকাউন্ট খুলুন ও বোনাস নিন!</p>
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="background: #00b894; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px; display: inline-block; font-size: 15px;">✅ Join Telegram</a>
+  <p style="margin: 0 0 12px; font-size: 16px;">📲 Telegram এ জয়েন করুন এবং বোনাস পান!</p>
+  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="display: flex; align-items: center; justify-content: center; gap: 8px; background: #0088cc; color: white; padding: 10px 18px; text-decoration: none; border-radius: 6px; font-size: 15px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo" style="height: 20px;">
+    Join Telegram
+  </a>
 </div>
 
 <!-- ✅ Animation -->
