--- a/index.html
+++ b/index.html
@@ -24,7 +24,41 @@
       📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet, Melbet, PlnBet — নিচিন্তে একাউন্ট করুন নিজেই ডিপোজিট উইথড্র করুন । বিশেষ সুবিধা cash out সিস্টেম | এখনই জয়েন করুন! 🎁
     </marquee>
   </div>
+  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Deposit Withdraw Popup</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <!-- Marquee -->
+  <marquee behavior="scroll" direction="left" style="background: navy; color: white; padding: 10px;">
+    আমাদের থেকে 1xBet, Linebet ডিপোজিট ও উইথড্র নিতে পারবেন — যোগাযোগ করুন এখনই!
+  </marquee>
+
+  <!-- Button Section -->
+  <div class="button-area">
+    <button class="popup-btn" onclick="openPopup('deposit')">ডিপোজিট</button>
+    <button class="popup-btn" onclick="openPopup('withdraw')">উইথড্র</button>
+  </div>
+
+  <!-- Popup Section -->
+  <div id="popup-box" class="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup()">&times;</span>
+      <h3 id="popup-title">ডিপোজিট</h3>
+      <p>আমাদের থেকে 1xBet বা Linebet এর ডিপোজিট / উইথড্র নিতে চাইলে যোগাযোগ করুন।</p>
+      <a id="popup-link" href="#" target="_blank" class="join-now">Join on IMO</a>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
   <div id="combo-container">
     <!-- 1xBet Section -->
     <section class="brand-section" id="1xbet">
