--- a/index.html
+++ b/index.html
@@ -25,37 +25,39 @@
     </marquee>
   </div>
   
-<!DOCTYPE html>
-<html lang="en">
+
+  <div id="combo-container">
+    <!-- 1xBet Section -->
+    <section class="brand-section" id="1xbet">
+      <div class="tag-popular">Popula<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deposit Withdraw Popup</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>All Site BD</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<!-- Button Section -->
-<div class="button-area">
-  <button class="popup-btn" onclick="openPopup('deposit')">ডিপোজিট</button>
-  <button class="popup-btn" onclick="openPopup('withdraw')">উইথড্র</button>
-</div>
-
-<!-- Popup Section -->
-<div id="popup-box" class="popup">
-  <div class="popup-content">
-    <span class="close-btn" onclick="closePopup()">&times;</span>
-    <h3 id="popup-title">ডিপোজিট</h3>
-    <p>আমাদের থেকে 1xBet বা Linebet এর ডিপোজিট / উইথড্র নিতে চাইলে যোগাযোগ করুন।</p>
-    <a id="popup-link" href="https://wa.me/8801826444505" target="_blank" class="join-now">Join on IMO</a>
+  <!-- Deposit & Withdraw Buttons -->
+  <div class="button-container">
+    <button onclick="showPopup('deposit')" class="btn-style">💳 ডিপোজিট</button>
+    <button onclick="showPopup('withdraw')" class="btn-style">🏧 উইথড্র</button>
   </div>
-</div>
+
+  <!-- Popup -->
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <span class="close" onclick="hidePopup()">&times;</span>
+      <h3 id="popup-title">সার্ভিস</h3>
+      <p>আমাদের থেকে 1xBet, Linebet ডিপোজিট এবং উইথড্র নিতে পারবেন।</p>
+      <a href="https://wa.me/8801826444505" target="_blank" class="btn-style">📲 Join Now on WhatsApp</a>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-</html>
-  <div id="combo-container">
-    <!-- 1xBet Section -->
-    <section class="brand-section" id="1xbet">
-      <div class="tag-popular">Popular</div>
+</html>r</div>
       <h2>1xbet</h2>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
