--- a/index.html
+++ b/index.html
@@ -6,46 +6,32 @@
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="1xBet & Linebet Promo Code- Oxy11" />
+  <meta property="og:title" content="1xBet & Linebet Promo Code - Oxy11" />
   <meta property="og:description" content="Get your bonus now🏆Safe & Fast registration." />
   <meta property="og:url" content="https://allsitebd.netlify.app/" />
   <meta name="twitter:card" content="summary" />
-
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
     <h1>International</h1>
     <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
+  <!-- 🔁 Marquee -->
   <div class="marquee-wrapper" style="background: linear-gradient(90deg, #0f172a, #000080); padding: 8px 0; color: #ffeb3b; font-size: 14px; font-weight: bold; font-family: 'Arial', sans-serif;">
     <marquee behavior="scroll" direction="left" scrollamount="6" onmouseover="this.stop()" onmouseout="this.start()">
       📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet, Melbet, PlnBet — নিচিন্তে একাউন্ট করুন নিজেই ডিপোজিট উইথড্র করুন । বিশেষ সুবিধা cash out সিস্টেম | এখনই জয়েন করুন! 🎁
     </marquee>
   </div>
-  
 
-  <div id="combo-container">
-    <!-- 1xBet Section -->
-    <section class="brand-section" id="1xbet">
-      <div class="tag-popular">Popula<!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>All Site BD</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-  <!-- Deposit & Withdraw Buttons -->
+  <!-- 💰 Deposit & Withdraw -->
   <div class="button-container">
     <button onclick="showPopup('deposit')" class="btn-style">💳 ডিপোজিট</button>
     <button onclick="showPopup('withdraw')" class="btn-style">🏧 উইথড্র</button>
   </div>
 
-  <!-- Popup -->
   <div id="popup" class="popup">
     <div class="popup-content">
       <span class="close" onclick="hidePopup()">&times;</span>
@@ -55,11 +41,14 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
-</body>
-</html>r</div>
-      <h2>1xbet</h2>
-      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xbet</a>
+  <!-- 🔗 Combo Sections -->
+  <div id="combo-container">
+
+    <!-- 1xBet -->
+    <section class="brand-section" id="1xbet">
+      <div class="tag-popular">Popular</div>
+      <h2>1xBet</h2>
+      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xBet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
@@ -68,7 +57,7 @@
       </div>
     </section>
 
-    <!-- Linebet Section -->
+    <!-- Linebet -->
     <section class="brand-section" id="linebet">
       <div class="tag-popular">Popular</div>
       <h2>Linebet</h2>
@@ -81,9 +70,9 @@
       </div>
     </section>
 
-    <!-- Melbet Section -->
+    <!-- Melbet -->
     <section class="brand-section" id="melbet">
-      <div class="tag-popular">Recommand</div>
+      <div class="tag-popular">Recommend</div>
       <h2>Melbet</h2>
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 Melbet</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
@@ -94,7 +83,7 @@
       </div>
     </section>
 
-    <!-- PlanBet Section -->
+    <!-- PlanBet -->
     <section class="brand-section" id="planbet">
       <div class="tag-popular">New 🌍</div>
       <h2>PlanBet</h2>
@@ -107,7 +96,7 @@
       </div>
     </section>
 
-    <!-- Betwiner Section -->
+    <!-- Betwiner -->
     <section class="brand-section" id="betwiner">
       <div class="tag-popular">Promo</div>
       <h2>Betwiner</h2>
@@ -119,58 +108,51 @@
         <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🎲Slots</a>
       </div>
     </section>
+
   </div>
 
-  <!-- Promo Code + Contact Section -->
+  <!-- 🎁 Promo Section -->
   <section id="promo-section">
     <h2>🎁 Get Your Bonus Now!</h2>
     <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
     <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Join WhatsApp</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
 
-  <a href="https://wa.me/8801826444505?text=Hi%2C%20I%20want%20to%20join%20your%20WhatsApp%20group" target="_blank" class="whatsapp-button">
-    Join WhatsApp
-  </a>
+    <a href="https://wa.me/8801826444505?text=Hi%2C%20I%20want%20to%20join%20your%20WhatsApp%20group" target="_blank" class="whatsapp-button">
+      Join WhatsApp
+    </a>
 
-</body>
-</html>
-  <!-- Telegram Join Button -->
-  <div class="telegram-join">
-    <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
-      <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
+    <div class="telegram-join">
+      <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank">
+        <img src="https://img.icons8.com/color/48/telegram-app--v1.png" alt="Telegram" />
+        Join Telegram
+      </a>
+    </div>
+  </section>
+
+  <!-- 📩 Telegram Auto Message -->
+  <div id="autoMsgBox" style="position: fixed; bottom: 25px; right: 25px; background: #1e2a47; color: white; border-radius: 15px; padding: 18px; max-width: 280px; box-shadow: 0 0 15px rgba(0,0,0,0.5); font-family: sans-serif; z-index: 9999; animation: slideUp 0.6s ease;">
+    <p style="margin: 0 0 12px; font-size: 16px;">📲 Telegram এ জয়েন করুন এবং বোনাস পান!</p>
+    <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="display: flex; align-items: center; justify-content: center; gap: 8px; background: #0088cc; color: white; padding: 10px 18px; text-decoration: none; border-radius: 6px; font-size: 15px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo" style="height: 20px;">
       Join Telegram
     </a>
   </div>
-  </section>
-</body>
-</html>
 
-
+  <!-- 🔁 Footer -->
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
-<!-- ✅ Telegram Message Box with Logo -->
-<div id="autoMsgBox" style="position: fixed; bottom: 25px; right: 25px; background: #1e2a47; color: white; border-radius: 15px; padding: 18px; max-width: 280px; box-shadow: 0 0 15px rgba(0,0,0,0.5); font-family: sans-serif; z-index: 9999; animation: slideUp 0.6s ease;">
-  <p style="margin: 0 0 12px; font-size: 16px;">📲 Telegram এ জয়েন করুন এবং বোনাস পান!</p>
-  <a href="https://t.me/+MeoTD85pHfo5YzU1" target="_blank" style="display: flex; align-items: center; justify-content: center; gap: 8px; background: #0088cc; color: white; padding: 10px 18px; text-decoration: none; border-radius: 6px; font-size: 15px;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo" style="height: 20px;">
-    Join Telegram
-  </a>
-</div>
 
-<!-- ✅ Animation -->
-<style>
-  @keyframes slideUp {
-    from {opacity: 0; transform: translateY(30px);}
-    to {opacity: 1; transform: translateY(0);}
-  }
-</style>
+  <!-- JS File -->
+  <script src="script.js"></script>
+
+  <!-- Animation -->
+  <style>
+    @keyframes slideUp {
+      from {opacity: 0; transform: translateY(30px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+  </style>
+
 </body>
 </html>
