--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
   <!-- 💰 Deposit & Withdraw -->
   <div class="button-container">
-    <button onclick="showPopup('deposit')" class="btn-style">💳 ডিপোজিট</button>
-    <button onclick="showPopup('withdraw')" class="btn-style">🏧 উইথড্র</button>
+    <button onclick="showPopup('deposit')" class="btn-style">💳 1xbet ডিপোজিট উইথড্র</button>
+    <button onclick="showPopup('withdraw')" class="btn-style">🏧Linebet ডিপোজিট উইথড্র</button>
   </div>
 
   <div id="popup" class="popup">
