--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 
   <!-- 💰 Deposit & Withdraw -->
   <div class="button-container">
-    <button onclick="showPopup('deposit')" class="btn-style">💳 1xbet ডিপোজিট উইথড্র</button>
-    <button onclick="showPopup('withdraw')" class="btn-style">🏧Linebet ডিপোজিট উইথড্র</button>
+    <button onclick="showPopup('deposit')" class="btn-style">🪙Deposit</button>
+    <button onclick="showPopup('withdraw')" class="btn-style">💶Withdraw</button>
   </div>
 
   <div id="popup" class="popup">
     <div class="popup-content">
       <span class="close" onclick="hidePopup()">&times;</span>
       <h3 id="popup-title">সার্ভিস</h3>
-      <p>আমাদের থেকে 1xBet, Linebet ডিপোজিট এবং উইথড্র নিতে পারবেন।</p>
-      <a href="https://wa.me/8801826444505" target="_blank" class="btn-style">📲 Join Now on WhatsApp</a>
+      <p>আমাদের থেকে 24 ঘণ্টা 1xBet/Linebet ডিপোজিট এবং উইথড্র নিতে পারবেন </p>
+      <a href="https://wa.me/8801826444505" target="_blank" class="btn-style">Chat On WhatsApp</a>
     </div>
   </div>
 
