--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="1xBet & Linebet Promo Code - Oxy11" />
-  <meta property="og:description" content="Get your bonus now🏆Safe & Fast registration." />
+  <meta property="og:description" content="1xbet রেজিষ্টার করুন বোনাস নিন " />
   <meta property="og:url" content="https://allsitebd.netlify.app/" />
   <meta name="twitter:card" content="summary" />
   <link rel="stylesheet" href="style.css" />
