--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="1xBet & Linebet Promo Code - Oxy11" />
   <meta property="og:description" content="1xbet রেজিষ্টার করুন বোনাস নিন " />
-  <meta property="og:url" content="https://allsitebd.netlify.app/" />
+  <meta property="og:url" content="https://1xbet24.netlify.app/#" />
   <meta name="twitter:card" content="summary" />
   <link rel="stylesheet" href="style.css" />
 </head>
