--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
+  <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>1xBet & Linebet - অফিসিয়াল জয়েন পেজ</title>
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="1xBet & Linebet Promo Code - Oxy11" />
-  <meta property="og:description" content="1xbet রেজিষ্টার করুন বোনাস নিন " />
-  <meta property="og:url" content="https://1xbet24.netlify.app/#" />
-  <meta name="twitter:card" content="summary" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <!-- SEO Meta -->
+  <meta name="description" content="অফিসিয়াল 1xBet ও Linebet জয়েন করুন Promo Code: Oxy11 দিয়ে! আজই অ্যাকাউন্ট খুলুন ও জিতে নিন বোনাস!" />
+
+  <!-- Open Graph for Facebook/WhatsApp -->
+  <meta property="og:title" content="1xBet & Linebet - অফিসিয়াল জয়েন পেজ" />
+  <meta property="og:description" content="অফিসিয়াল 1xBet ও Linebet জয়েন করুন Promo Code: Oxy11 দিয়ে! আজই অ্যাকাউন্ট খুলুন ও জিতে নিন বোনাস!" />
+  <meta property="og:image" content="https://i.ibb.co/p3NVwcy/og-1xbet-linebet.jpg" />
+  <meta property="og:url" content="https://1xbet24.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="bn_BD" />
+  <meta property="fb:app_id" content="1234567890" /> <!-- Optional -->
+
+  <!-- Twitter Share -->
+  <meta name="twitter:card" content="summary_large_image" />
+  </head>
 
   <header>
     <h1>International</h1>
